syntax = "proto3";

package intro;
option go_package="introduction/protobuf;intropb";

message Introduce {
    string first_name = 1;
    string last_name = 2;
}

message IntroRequest {
    Introduce introduce = 1;
}

message IntroResponse {
    string result = 1;
}

service IntroService{
    // Unary
    rpc Intro (IntroRequest) returns (IntroResponse) {};
}